--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,15 @@
 Package: lspls
 Type: Package
-Title: LS-PLS ... FIXME
+Title: LS-PLS Models
 Version: 0.1
 Date: 2005-12-02
 Author: Bjørn-Helge Mevik
 Maintainer: Bjørn-Helge Mevik <bhx5@mevik.net>
 Encoding: latin1
 Depends: pls
-Description: Implements the LS-PLS method described in [cit.loc] FIXME
+Description: Implements the LS-PLS method described in e.g. Jørgensen, K.,
+  Segtnan, V. H., Thyholt, K., Næs, T. (2004)  A Comparison of Methods for
+  Analysing Regression Models with Both Spectral and Designed Variables.
+  Journal of Chemometrics, 18(10), 451--464.
 License: GPL version 2
 URL: http://mevik.net/work/software/lspls.html
