--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,14 +2,15 @@ Package: lspls
 Type: Package
 Title: LS-PLS Models
 Version: 0.1
-Date: 2005-12-02
+Date: 2006-01-11
 Author: Bjørn-Helge Mevik
 Maintainer: Bjørn-Helge Mevik <bhx5@mevik.net>
 Encoding: latin1
 Depends: pls
-Description: Implements the LS-PLS method described in e.g. Jørgensen, K.,
-  Segtnan, V. H., Thyholt, K., Næs, T. (2004)  A Comparison of Methods for
-  Analysing Regression Models with Both Spectral and Designed Variables.
+Description: Implements the LS-PLS (least squares - partial least squares)
+  method described in for instance Jørgensen, K., Segtnan, V. H., Thyholt, K.,
+  Næs, T. (2004)  A Comparison of Methods for Analysing Regression Models with
+  Both Spectral and Designed Variables.
   Journal of Chemometrics, 18(10), 451--464.
 License: GPL version 2
 URL: http://mevik.net/work/software/lspls.html
