--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,19 @@
 Package: lspls
-Type: Package
 Title: LS-PLS Models
 Version: 0.2-1
 Date: 2011-10-20
-Author: Bjørn-Helge Mevik
-Maintainer: Bjørn-Helge Mevik <bhx6@mevik.net>
+Authors@R: c(person("Bjørn-Helge", "Mevik", role = c("aut", "cre"),
+                     email = "b-h@mevik.net"))
+Author: Bjørn-Helge Mevik [aut, cre]
+Maintainer: Bjørn-Helge Mevik <b-h@mevik.net>
 Encoding: UTF-8
 Depends: pls (>= 2.2.0)
+Imports: grDevices, graphics, methods, stats
 Description: Implements the LS-PLS (least squares - partial least squares)
   method described in for instance Jørgensen, K., Segtnan, V. H., Thyholt, K.,
-  Næs, T. (2004)  A Comparison of Methods for Analysing Regression Models with
-  Both Spectral and Designed Variables.
+  Næs, T. (2004)  "A Comparison of Methods for Analysing Regression Models with
+  Both Spectral and Designed Variables"
   Journal of Chemometrics, 18(10), 451--464.
-License: GPL version 2
-URL: http://mevik.net/work/software/lspls.html
+License: GPL-2
+URL: http://mevik.net/work/software/lspls.html, https://github.com/bhmevik/lspls
+BugReports: https://github.com/bhmevik/lspls/issues
