--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: lspls
 Title: LS-PLS Models
-Version: 0.2-1
-Date: 2011-10-20
+Version: 0.2-2
+Date: 2018-07-26
 Authors@R: c(person("Bjørn-Helge", "Mevik", role = c("aut", "cre"),
                      email = "b-h@mevik.net"))
 Author: Bjørn-Helge Mevik [aut, cre]
@@ -13,7 +13,7 @@ Description: Implements the LS-PLS (least squares - partial least squares)
   method described in for instance Jørgensen, K., Segtnan, V. H., Thyholt, K.,
   Næs, T. (2004)  "A Comparison of Methods for Analysing Regression Models with
   Both Spectral and Designed Variables"
-  Journal of Chemometrics, 18(10), 451--464.
+  Journal of Chemometrics, 18(10), 451--464, <doi:10.1002/cem.890>.
 License: GPL-2
 URL: http://mevik.net/work/software/lspls.html, https://github.com/bhmevik/lspls
 BugReports: https://github.com/bhmevik/lspls/issues
